--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,9 +1,9 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+// Kaldi logo brand color: #79D6FF
+$kaldi-red: #79D6FF
+$kaldi-red-invert: #79D6FF
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
@@ -61,7 +61,7 @@ $black: #2b2523
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: #79D6FF
     text-align: center
     -webkit-box-shadow: inset 0 0 0 2px #CC3700
     box-shadow: inset 0 0 0 2px #f40
@@ -114,7 +114,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #79D6FF;
 .blog-list-item header
   display: flex;
   margin-bottom: 1em;
